# pkuppens

./: .cursor_lsremote.txt  .cursor_lsremote_after.txt  .cursor_pushdelete.txt  .gitattributes  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  CLAUDE.md  README.md
.cursor/commands/: create-skill.md  install-superpowers.md  skill-creation.md
.github/workflows/: build-ci-base-images.yml  lint-markdown.yml  validate-skills.yml
ci-base-images/: Dockerfile.ci-base-3.12  Dockerfile.ci-hf-base-3.12  Dockerfile.ci-whisper-3.12  README.ghcr.md  README.md  download_hf_ci_models.py  download_whisper_model.py  requirements-hf.txt
docs/profile/: profile_strategy_audit.md  value_proposition_demo_plan.md
docs/skills/: audit-results.md  superpowers-reconciliation.md
docs/workflow/: README.md  azure-devops.md  github.md
git_util_scripts/: git_pull_all.sh  move_repos_to_subdirectories.sh
scripts/: validate-skill-frontmatter.sh
skills/: CLAUDE.md  COOPERATION.md  README.md  REFACTORED_SKILLS.md  SKILL_TREE.md
skills/_meta/: human-ai-execution.md
skills/api-design/: SKILL.md
tools/skill-benchmark/: .env.example  .gitignore  README.md  pyproject.toml
tools/skill-benchmark/src/skill_benchmark/: README.md  __init__.py  cli.py  config.py  loader.py  models.py  paths.py  provider.py  report.py  runner.py
tools/skill-benchmark/src/skill_benchmark/agents/: __init__.py  generator.py  scorer.py
tools/skill-benchmark/tests/: test_cli.py  test_config.py  test_generator.py  test_loader.py  test_provider.py  test_report.py  test_runner.py  test_scorer.py
(+124 files in other folders)
